[FIX] portfolio section height on mobile

--- a/src/style.less
+++ b/src/style.less
@@ -215,7 +215,7 @@ html {
 
   .portfolio{
     .section-base();
-    height: @base-height + 5vh;
+    height: @base-height + 8vh;
     background-color: @portfolio-color;
 
     .row, .row a {
